Fix navbar icon width; add margin-bottom: 50px to some components to avoid overlap with navbar

--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -1,6 +1,6 @@
 div.navbar {
   width: 100vw;
-  height: 10vh;
+  height: 50px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -11,7 +11,6 @@ div.navbar {
 }
 
 div.navbar img {
-  width: 20vw;
   text-align: center;
   height: 30px;
 }
