--- a/src/stylesheets/singleDeck.css
+++ b/src/stylesheets/singleDeck.css
@@ -5,6 +5,7 @@ html {
 
 div.single-deck-page h1 {
   margin: 0;
+  
 }
 
 div.single-deck-page .single-deck-banner {
@@ -16,30 +17,11 @@ div.single-deck-page .single-deck-banner {
   text-align: center;
 }
 
-/* div.personal-card-container {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0 70px 0;
-  flex-wrap: wrap;
-}
-
-div.personal-flashcard {
-  width: 80vw;
-  border: 1px solid black;
+div.single-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  min-height: 250px;
-  margin: 20px 0;
-} */
-
-
-.single-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 80vw;
+  margin-bottom: 70px;
 }
 
 .single-flashcard-container {
@@ -47,10 +29,9 @@ div.personal-flashcard {
   justify-content: center;
   align-items: center;
   margin: 20px 0;
-  margin-bottom: 70px;
+  margin-bottom: 30px;
   width: 80vw;
   min-height: 250px;
-  border: 1px solid black;
 }
 
  .single-flashcard {
@@ -67,8 +48,6 @@ div.personal-flashcard {
 
 .single-flashcard-front, .single-flashcard-back {
   position: absolute;
-  /* width: 100%;
-  height: 100%; */
   flex: 1;
   backface-visibility: hidden;  
 }
